src/test/ui/span/issue-35987.stderr
error[E0404]: expected trait, found type parameter `Add`
  --> $DIR/issue-35987.rs:5:21
   |
LL | impl<T: Clone, Add> Add for Foo<T> {
   |                     ^^^ not a trait
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use std::ops::Add;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
